@@ -1,3 +1,8 @@
+2003-09-29  Marcus Brinkmann  <marcus@gnu.org>
+
+	* loader.c (loader_elf_load): Fix wordsize check.  Submitted by
+	Johan Rydberg.
+
 2003-09-25  Johan Rydberg  <jrydberg@night.trouble.net>
 
         * laden.c (main): Call start_kernel to launch kernel instead
